# worldtalker

./: .gitignore  README  README.md  compose.yaml
wtai/: Dockerfile  makefile  pyproject.toml  requirements.txt
wtai/protos/: translate.proto
wtai/tests/: test_server.py  test_translate.py
wtai/wtai/: server.py
wtai/wtai/proto/: translate_pb2.py  translate_pb2_grpc.py
wtai/wtai/translator/: translate.py
wtbackend/: Dockerfile  go.mod  go.sum  main.go  makefile
wtbackend/domain/: translate.go
wtbackend/model/: message.go  user.go
wtbackend/proto/: translate.proto
wtbackend/proto/translate/: translate.pb.go  translate_grpc.pb.go
wtbackend/router/: route.go
wtbackend/service/: translator.go  translator_service_test.go  websocket.go
