[tool.poetry]
name = "wtai"
version = "0.1.0"
description = ""
authors = ["Rhaqim <anusiemj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.69.0"
grpcio-tools = "^1.57.0"
googletrans = "^4.0.2"
pytest = "^8.3.4"
protobuf = "^5.29.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
